<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3b13f"
    tools:context=".FetchActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logoDesc"
        android:scaleType="fitCenter"
        android:src="@drawable/transparent_logo" />

    <Button
        android:id="@+id/fetchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageLogo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#300c39"
        android:fontFamily="sans-serif"
        android:onClick="fetchResults"
        android:text="@string/buttonFetch"
        android:textColor="#f3b13f"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/centerIDisplayHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/loadingBarHolder"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/center_image_circle_background"
            android:contentDescription="@string/centerImage"
            android:padding="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fetchgift" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/loadingBarHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fetchButton"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/waitingBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="#300c39"
            android:progressDrawable="@drawable/waiting_progress"
            android:visibility="invisible" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/dataHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fetchButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#300c39"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/idView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/stat_border"
            android:gravity="center"
            android:text="@string/id"
            android:textColor="#f3b13f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/listIdView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/stat_border"
            android:gravity="center"
            android:text="@string/listId"
            android:textColor="#f3b13f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#f3b13f"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/fetchScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dataHeader"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:id="@+id/dataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
</RelativeLayout>